<resources>
    <string name="app_name">LoL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- 登陆界面 -->
    <string name="login_in">登录</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="account">邮箱</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="username">昵称</string>
    <string name="city">城市</string>
</resources>
